--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -13,11 +13,17 @@
   border-radius: 25px;
   background-color: rgba(145, 227, 227, 0.7);
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .blog-item img {
   width: 100%;
   height: auto;
+  aspect-ratio: 1/1;
+  object-fit: cover;
   border-radius: 25px;
  }
 
